   begin and end methods on Cell/Edge/Face/Node/SideGeometry respectively.
   The Iterator constructors themselves are now private.

6) BoxContainerIterator (aka BoxContainer::iterator) and
   BoxContainerConstIterator (aka BoxContainer::const_iterator) are now
   accessed through the begin and end methods on class BoxContainer.  The
   constructors for each iterator are now private.

*****************************************************************************

-----------------------------------------------------------------------------
                Details about what's new
-----------------------------------------------------------------------------

1) Class Connector describes Box overlaps between two BoxLevels.  It
   corresponds to the OverlapConnector concept.  Class MappingConnector is
   derived from Connector and hence it also describes Box overlaps between two
   BoxLevels.  However, it describes these overlaps in a specific context--
   when the base BoxLevel has undergone a transition resulting in the head
   BoxLevel.  Hence it describes how the Boxes in the original BoxLevel (i.e.
   the base) map onto the Boxes in the modified BoxLevel (i.e. the head).

   Previously, there was no distinction between these Connector concepts.  They
   were both embodied in class Connector and there was to way to distinguish
   one from another.  Hence there was no way to ensure that any given Connector
   was being used in the proper context.

   The library now constructs and uses MappingConnectors where connectors
   describing how BoxLevels have changed are needed.  This provides both type
   safety and added clarity as to how methods taking various Connectors are to
   be used.

2) Many interfaces have been simplified as a single Connector object can now
   be used to refer to both the Connector and its transpose.  In particular,
   there is now only 1 modify method and 3 bridge methods as the other